# thallium-arrow-transport

./: .gitignore  CMakeLists.txt  README.md  a.out  deploy_data.sh  experiments.md  install_arrow.sh  plot.py  ptr.cc  queries.txt  results_atc_col_e2e_rdma  results_atc_columnar  thallium_1
.github/workflows/: benchmark.yml  ssh.yml  super-linter.yml
flight/: CMakeLists.txt  client.cc  engine.h  server.cc  utils.h
results/: flight-duckdb  flight-duckdb-2-8  flight-duckdb-2-8-nopt  plot.py  plot.transpose.py  result_flight  result_thallium  thallium-duckdb  thallium-duckdb-2-8-nopt  thallium-duckdb-2-8-opt
results/131072/: thallium-duckdb-2-8-nopt
results/paper/131072/: flight  thallium  thallium-nonoptimized  thallium-optimized
results/paper/final/: flight  flight-acero  flight-duckdb  thallium-duckdb
scripts/: build.sh  clean_cache.sh  client.sh  config.sh  config_client.sh  config_network.sh  config_server.sh  deploy_data_disk.sh  deploy_data_disk_multiple.sh  deploy_data_tmpfs.sh  explore_file.py  flight_client.sh  flight_server.sh  install_arrow.sh  install_duckdb.sh  prep_env.sh  server.sh  thallium_client.sh  thallium_server.sh  write_dataset.py
src/: CMakeLists.txt  ace.h  arrow_headers.h  client.cc  client2.cc  constants.h  engine.h  executor.h  expose.cc  flight_client.cc  flight_server.cc  headers.h  micro_bench.cc  min_client.cc  min_client2.cc  min_client4.cc  min_client5.cc  min_server.cc  min_server2.cc  min_server3.cc  min_server4.cc  min_server5.cc  min_server6.cc  rao.h  server.cc  server2.cc  thallium_client.cc  thallium_server.cc  utils.h
thallium/: CMakeLists.txt  arrow_executor.h  client.cc  crbq.h  duckdb_executor.h  engine.h  headers.h  payload.h  server.cc  server.h  server_debug.cc  server_new.cc  utils.h
